kiln/webapps/ROOT/assets/styles/site.css
/* ... */
.top-bar-section ul li:hover>a,
.top-bar-section ul li.active>a,
.top-bar-section li a:not(.button):hover,
.top-bar-section li a:not(.button):active,
.top-bar-section li a:hover,
.top-bar-section li a:active {
  background : #e1e1e1;
  color      : #344f5f;
}

.top-bar .toggle-topbar a {
  text-transform : none;
}

.top-bar .toggle-topbar.menu-icon a:hover,
.top-bar .toggle-topbar.menu-icon a:active{
  background : transparent;
  color      : #344f5f;
}

.top-bar .toggle-topbar.menu-icon a span {
  box-shadow         : 0 10px 0 1px #344f5f, 0 16px 0 1px #344f5f, 0 22px 0 1px #344f5f;
  -webkit-box-shadow : 0 10px 0 1px #344f5f, 0 16px 0 1px #344f5f, 0 22px 0 1px #344f5f;
}

.top-bar-section .dropdown  {
  background : #f4f4f4;
}

.top-bar-section .dropdown li a {
  font-size   : .7em;
  font-weight : normal;
  line-height : 1.35em;
}

/* this removes the dropdown arrows */
.top-bar-section .has-dropdown>a  {
  padding-right : 15px !important;
}

.top-bar-section .has-dropdown>a:after {
  content : "";
  border  : none;
}


.top-bar-section ul li>a {
  padding-top    : 0;
  padding-bottom : 0;
}
/* language menu */

@media only screen and (min-width: 940px) {
.top-bar-section .language-choice li.lang a {
  padding-right         : .4rem;
  padding-left          : .4rem;

  background-color      : #555555;
  font-family           : 'Times New Roman', serif;
  font-size             : 1.5rem;
  font-weight           : normal;
  color                 : #9f9f9f;
  border                : none;
  border-radius         : 5px;

  -webkit-border-radius : 5px;
  -moz-border-radius    : 5px;
}

.top-bar-section .language-choice li.lang {
  margin-right : 5px;
  background   : transparent;
}

}

/* menu icon */

.top-bar .toggle-topbar.menu-icon {
  margin-top : -24px;
}

.top-bar .toggle-topbar.menu-icon a {
  font-size   : .7em;
  font-weight : normal;
  line-height : 33px;
}




/* jumpform */
@media only screen and (min-width: 940px) {
.top-bar-section .has-form {
  width: 186px;
}
}

.top-bar input,
.top-bar .button {
  top              : 2px;

  background-color : #9f9f9f;
  font-size        : .8rem;
  color            : #344f5f;
  border           : 0;
  border-top       : 1px solid #555555;
  border-bottom    : 1px solid #555555;
  border-left      : 1px solid #555555;
}

.top-bar input[type='submit'] {
  background-color : #555555;
  color            : #9f9f9f;
  border-right     : 1px solid #555555;
}

.top-bar input:focus {
  background : #e1e1e1;
}

.top-bar input::-webkit-input-placeholder {
  color : #344f5f;
}

.top-bar input:-moz-placeholder { /* Firefox 18- */
  color : #344f5f;
}

.top-bar input::-moz-placeholder {  /* Firefox 19+ */
  color : #344f5f;
}

.top-bar input:-ms-input-placeholder {
  color : #344f5f;
}

.top-bar input:focus::-webkit-input-placeholder {
  color : #f4f4f4;
}

.top-bar input:focus:-moz-placeholder { /* Firefox 18- */
  color : #f4f4f4;
}

.top-bar input:focus::-moz-placeholder {  /* Firefox 19+ */
  color : #f4f4f4;
}

.top-bar input:focus:-ms-input-placeholder {
  color : #f4f4f4;
}

/* rock on the left */

#rock {
  min-height          : 690px;
  margin-top          : -14px;

  background          : url(../images/side_bg.png) no-repeat scroll transparent;
  background-position : right -65px;
}

@media only screen and (min-width: 1240px) {
#rock {
background-position: left  -65px;
}
}

#body-wrapper {
}

#main-content {
}

/* inscription  */

.inscription h2.subpart,
.inscription h2 em {
  font-weight : normal;
  font-style: italic;
  color       : #285072;
}

.inscription .details {
  margin-bottom : 1em;
}

.inscription .details h6 {
  font-size: 1em;
  font-weight: bold;
  font-style: normal;
  color: #000;
}
.inscription .details h6,
.inscription .details  p {
  margin-top    : 0;
  margin-bottom : 0;
}

.inscription .details p + p {
  margin-bottom : 1em;
}

.row.inscription-data {
  margin-top : 2em;
}

.section-container.tabs>section>.title a,
.section-container.tabs>.section>.title a {
  padding-top    : 2px;
  padding-bottom : 2px;
}

.inscription-data .section-container section p.title {
  border-top-right-radius         : 5px;
  border-top-left-radius          : 5px;

  -webkit-border-top-left-radius  : 5px;
  -webkit-border-top-right-radius : 5px;
  -moz-border-radius-topleft      : 5px;
  -moz-border-radius-topright     : 5px;
}

.inscription-data .section-container section.active p.title,
.inscription-data .section-container section.active div.content,
.inscription-data .section-container section.active div.content code {
  background : #ddd;
}

.inscription-data .section-container.tabs .content.epidoc_xml {
  overflow   : auto;
  max-height : 300px;
}

/* tei body */

.tei.body ul, .tei.body ol {list-style-type: none}

/* indices */

dl.indices-person dd ul.inline-list,
dl.indices-places dd ul.inline-list,
dl.indices-abbrs dd ul.inline-list {
  display        : inline-block;
  vertical-align : top;
}

.link2inscription {
}

table.indices tr.index_row th.table_sub_heading {
  padding-top    : 12px;
  padding-bottom : 6px;

  font-size      : 1.25em;
  color          : #285072;
  text-align     : left;
}

table.indices tr.index_row th,
table.indices tr.index_row td {
  vertical-align : top;

  padding-top    : 4px;
  padding-bottom : 2px;

  font-size      : 1em;
}

table.indices tr.index_row th {
  font-size  : 1em;
  text-align : left;
  min-width: 200px;
}

table.indices tr.index_row th small {
  vertical-align : baseline;

  font-size      : 1em;
  font-weight    : normal;
  color          : #999999;
}

table.indices tr.index_row td ul.inline-list {
  margin-bottom : 0;
}

dl.indices dd {
  padding-left : 1em;
}


.indices span.person_detail_label {
  display     : block;

  font-size   : 0.85em;
  font-weight : bold;
  color       : #666;
}

dl.indices.indices-locations  dd {
  margin-bottom : 0;
}

li.concordance_item {
  clear: both;
}

li.concordance_item p.concordance_link {
  padding-left: 3em;
}
/* ... */

